kotlin-server/k3s/auth-database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-auth-statefulset
spec:
  serviceName: "postgres-auth"
  replicas: 1
  selector:
    matchLabels:
      app: postgres-auth
  template:
    metadata:
      labels:
        app: postgres-auth
    spec:
      containers:
        - name: postgres-auth
          image: postgres:18-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata-auth
              mountPath: /var/lib/postgresql
  volumeClaimTemplates:
    - metadata:
        name: pgdata-auth
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
