kotlin-server/k3s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-app
  template:
    metadata:
      labels:
        app: auth-app
    spec:
      containers:
        - name: auth-app
          image: kotlin-server-auth-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8083
            initialDelaySeconds: 30
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8083
            initialDelaySeconds: 15
            periodSeconds: 5
