kotlin-server/k3s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway-app
  template:
    metadata:
      labels:
        app: gateway-app
    spec:
      containers:
        - name: gateway-app
          image: kotlin-server-gateway-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
