kotlin-server/k3s/kafka-write-read-votes.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka-write-read-votes-statefulset
spec:
  serviceName: "kafka-write-read-votes"
  replicas: 1
  selector:
    matchLabels:
      app: kafka-write-read-votes
  template:
    metadata:
      labels:
        app: kafka-write-read-votes
    spec:
      containers:
        - name: kafka-write-read-votes
          image: confluentinc/cp-kafka:7.7.7
          ports:
            - containerPort: 9092
              name: plaintext
            - containerPort: 9093
              name: controller
          volumeMounts:
            - name: kafka-write-read-votes
              mountPath: /var/lib/kafka/data
  volumeClaimTemplates:
    - metadata:
        name: kafka-write-read-votes
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
