kotlin-server/k3s/read-votes-database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-read-votes-statefulset
spec:
  serviceName: "postgres-read-votes"
  replicas: 1
  selector:
    matchLabels:
      app: postgres-read-votes
  template:
    metadata:
      labels:
        app: postgres-read-votes
    spec:
      containers:
        - name: postgres-read-votes
          image: postgres:18-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata-read-votes
              mountPath: /var/lib/postgresql
  volumeClaimTemplates:
    - metadata:
        name: pgdata-read-votes
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
