kotlin-server/k3s/write-votes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: write-votes-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: write-votes-app
  template:
    metadata:
      labels:
        app: write-votes-app
    spec:
      containers:
        - name: write-votes-app
          image: kotlin-server-write-votes-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 5
