kotlin-server/k3s/administration-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: administration-service
spec:
  selector:
    app: administration-app
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
  type: ClusterIP
