kotlin-server/k3s/auth-database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-auth
  labels:
    app: postgres-auth
spec:
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres-auth
  type: ClusterIP
  selector:
    app: postgres-auth
