kotlin-server/k3s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-app
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
