kotlin-server/k3s/email-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-service
spec:
  selector:
    app: email-app
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
  type: ClusterIP
