kotlin-server/k3s/kafka-write-read-votes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-write-read-votes
spec:
  selector:
    app: kafka-write-read-votes
  ports:
    - name: plaintext
      port: 9092
      targetPort: 9092
    - name: controller
      port: 9093
      targetPort: 9093
  type: ClusterIP
