kotlin-server/k3s/read-votes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: read-votes-service
spec:
  selector:
    app: read-votes-app
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
