kotlin-server/k3s/write-votes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: write-votes-service
spec:
  selector:
    app: write-votes-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
