kotlin-server/k3s/auth-database-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auth-database-ingress
spec:
  podSelector:
    matchLabels:
      app: postgres-auth
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: auth-app
      ports:
        - protocol: TCP
          port: 5432
