kotlin-server/k3s/email-database-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: email-database-ingress
spec:
  podSelector:
    matchLabels:
      app: redis-email
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: email-app
      ports:
        - protocol: TCP
          port: 6379
